# gemscli

./: .gitignore  LICENSE  README.md  pyproject.toml
data/systems/PC_leaching/gemsfiles/: PC-dbr-0-0000.json  PC-dch.json  PC-ipm.json  PC-slim-dbr-0-0000.json  PC-slim-dch.json  PC-slim-ipm.json  PC_2025-dbr-0-0000.json  PC_2025-dch.json  PC_2025-ipm.json
data/systems/calcite/gemsfiles/: calcite-dbr-0-0000.json  calcite-dch.json  calcite-ipm.json
data/systems/exchange_sorption/gemsfiles/: Exchange-dat.lst  Exchange-dat.lst.txt  Exchange-dbr.lst
data/systems/ferrite_carbonation/gemsfiles/: fc-dat.lst  fc-dbr-0-0000.json  fc-dch.json  fc-ipm.json
data/systems/iron_redox/gemsfiles/: Iron-dat.lst  Iron-dat.lst.txt  Iron-dbr.lst  Iron2Dec-dat.lst  Iron2Dec-dat.lst.txt  Iron2Dec-dbr.lst
data/systems/mortar_dissolution/gemsfiles/: mortar-dbr-0-0000.json  mortar-dch.json  mortar-ipm.json
gems_cli/: __init__.py  cli.py  engine.py  mcp_server.py  path.py  utils.py
gems_cli/templates/: aragonite_calcite.json  cement_hydration.json
tests/: conftest.py  test_cli.py  test_engine.py  test_init.py  test_mcp_server.py  test_path.py  test_utils.py
