[project]
name = "gemscli"
version = "0.1.0"
description = "CLI tool wrapping xGEMS for AI Agent thermodynamic simulation"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
gems-cli = "gems_cli.cli:main"
gems-mcp = "gems_cli.mcp_server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["gems_cli*"]
